--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.0",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.5",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "paystack": "^2.0.1",
     "paystack-api": "^2.0.6"
