--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "an ecommerce shop backend",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
-  },
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+ },
   "keywords": [
     "ecommerce",
     "shop",
