--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "an ecommerce shop backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "dev": "nodemon index.js"
- },
+  },
   "keywords": [
     "ecommerce",
     "shop",
@@ -22,6 +22,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
+    "express-formidable-v2": "^2.2.1",
+    "formidable": "^2.1.1",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
