--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.20",
     "paystack": "^2.0.1",
     "paystack-api": "^2.0.6"
