--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.0",
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
@@ -26,6 +28,7 @@
     "express-formidable-v2": "^2.2.1",
     "formidable": "^2.1.1",
     "joi": "^17.7.0",
+    "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.5",
